samples/_failures_safe/1761641458_278570_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ef9de04.c: In function ‘main’:
./samples/SAFE/__tmp_3ef9de04.c:187:18: error: ‘evaluate’ undeclared (first use in this function)
  187 |     int result = evaluate
      |                  ^~~~~~~~
./samples/SAFE/__tmp_3ef9de04.c:187:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_3ef9de04.c:187:5: error: expected ‘,’ or ‘;’ at end of input
  187 |     int result = evaluate
      |     ^~~
./samples/SAFE/__tmp_3ef9de04.c:187:5: error: expected declaration or statement at end of input
